Initialize Project 3 with Project 2 contents

--- a/index.html
+++ b/index.html
@@ -26,114 +26,172 @@
     </div>
   </header>
 
+  <!-- Mobile instruction (shown at top on mobile) -->
+  <p class="mobile-prompt mobile-prompt-top">Scroll to view timeline</p>
+
   <!-- Timeline Cards Section -->
   <section>
+
     <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>1968: Intel Founded</h2>
+          <img src="img/1.png" alt="Intel Founded 1968">
+        </div>
+        <div class="card-back">
+          <h2>1968: Intel Founded</h2>
+          <p>
+            Robert Noyce and Gordon Moore rename the newly formed company 
+            NM Electronics to Intel Corporation, laying the foundation for 
+            decades of technological innovation.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>1971: First Microprocessor</h2>
+          <img src="img/2.png" alt="First Microprocessor 1971">
+        </div>
+        <div class="card-back">
+          <h2>1971: First Microprocessor</h2>
+          <p>
+            Intel debuts the 4004, the world's first commercial microprocessor, 
+            igniting the microprocessor revolution and propelling the future 
+            of computing devices.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>1978: 8086 Processor</h2>
+          <img src="img/3.png" alt="8086 Processor 1978">
+        </div>
+        <div class="card-back">
+          <h2>1978: 8086 Processor</h2>
+          <p>
+            Launch of the 8086 processor, establishing the x86 architecture 
+            that drives countless PCs and servers in the modern era.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>1985: 386 Processor</h2>
+          <img src="img/4.png" alt="386 Processor 1985">
+        </div>
+        <div class="card-back">
+          <h2>1985: 386 Processor</h2>
+          <p>
+            Intel introduces the 386 processor with 32-bit architecture, 
+            ushering in a new era of performance and multitasking for 
+            personal computers.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>2006: Peak GHG Emissions</h2>
+          <img src="img/5.png" alt="Peak GHG Emissions 2006">
+        </div>
+        <div class="card-back">
+          <h2>2006: Peak GHG Emissions</h2>
+          <p>
+            This year marks Intel's highest annual greenhouse gas emissions 
+            for operations. Over subsequent years, Intel invests heavily in 
+            chemical abatement, renewable energy, and energy-efficient 
+            manufacturing to reverse this trend.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>2020: RISE Strategy</h2>
+          <img src="img/6.png" alt="RISE Strategy 2020">
+        </div>
+        <div class="card-back">
+          <h2>2020: RISE Strategy</h2>
+          <p>
+            Intel launches its RISE (Responsible, Inclusive, Sustainable, 
+            Enabling) strategy and 2030 goals, aiming to drive industry-wide 
+            progress on climate action, water stewardship, and waste reduction.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>2022: Net-Zero By 2040</h2>
+          <img src="img/7.png" alt="Net-Zero By 2040">
+        </div>
+        <div class="card-back">
+          <h2>2022: Net-Zero By 2040</h2>
+          <p>
+            Intel announces its commitment to achieve net-zero greenhouse 
+            gas emissions (Scope 1 and 2) across its global operations 
+            by 2040, building on years of environmental initiatives.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>2023: Renewable Electricity</h2>
+          <img src="img/8.png" alt="Renewable Electricity 2023">
+        </div>
+        <div class="card-back">
+          <h2>2023: Renewable Electricity</h2>
+          <p>
+            The company achieves 99% renewable electricity usage worldwide, 
+            helping to drastically lower carbon emissions and driving progress 
+            toward Intel's long-term sustainability goals.
+          </p>
+        </div>
+      </div>
     </div>
 
     <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <h2>2024: Sustainability Summit</h2>
+          <img src="img/9.png" alt="Sustainability Summit 2024">
+        </div>
+        <div class="card-back">
+          <h2>2024: Sustainability Summit</h2>
+          <p>
+            Intel hosts its first Sustainability Summit, uniting suppliers, 
+            government officials, and industry leaders to collaborate on 
+            next-generation sustainable semiconductor manufacturing.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -187,5 +245,10 @@
     <h2>Subscribe to our Newsletter</h2>
     <!-- Add form here -->
   </section>
+
+  <!-- Desktop instruction -->
+  <p class="desktop-prompt">Scroll to view timeline | Hover over cards to learn more!</p>
+  <!-- Mobile instruction (at bottom, hidden) -->
+  <p class="mobile-prompt mobile-prompt-bottom">Scroll to view timeline</p>
 </body>
 </html>
