--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
     </div>
   </section>
 
+    <!-- Desktop instruction -->
+  <p class="desktop-prompt">Scroll to view timeline | Hover over cards to learn more!</p>
+  <!-- Mobile instruction (at bottom, hidden) -->
+  <p class="mobile-prompt mobile-prompt-bottom">Scroll to view timeline</p>
+
   <!-- 3-Column Content Section -->
   <section class="container my-5">
     <div class="row g-4">
@@ -248,10 +253,9 @@
     <!-- Add form here -->
   </section>
 
-  <!-- Desktop instruction -->
-  <p class="desktop-prompt">Scroll to view timeline | Hover over cards to learn more!</p>
-  <!-- Mobile instruction (at bottom, hidden) -->
-  <p class="mobile-prompt mobile-prompt-bottom">Scroll to view timeline</p>
+  <footer>
+    <p>&copy; 2026 Intel Corporation. All rights reserved.</p>
+  </footer>
   
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
