Add newsletter subscription form

--- a/index.html
+++ b/index.html
@@ -249,10 +249,28 @@
   </section>
 
   <!-- Subscription Form -->
-  <section>
-    <h2>Subscribe to our Newsletter</h2>
-    <!-- Add form here -->
-  </section>
+  <div class="container px-4 px-md-5">
+    <h5 class="mb-3 text-center">
+      Subscribe to our newsletter
+    </h5>
+
+  <form class="row g-2 align-items-center">
+    <div class="col-sm-9">
+      <input
+        type="email"
+        class="form-control"
+        placeholder="Enter your email"
+        required
+      >
+    </div>
+    <div class="col-sm-3 d-grid">
+      <button type="submit" class="btn btn-primary">
+        Subscribe
+      </button>
+    </div>
+  </form>
+</div>
+
 
   <footer>
     <p>&copy; 2026 Intel Corporation. All rights reserved.</p>
