--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <main>
   <!-- Header / Hero Section -->
   <header>
     <div>
@@ -250,9 +251,9 @@
 
   <!-- Subscription Form -->
   <div class="container px-4 px-md-5">
-    <h5 class="mb-3 text-center">
+    <h3 class="mb-3 text-center">
       Subscribe to our newsletter
-    </h5>
+    </h3>
 
   <form class="row g-2 align-items-center">
     <div class="col-sm-9">
@@ -405,5 +406,6 @@
       }, 3000);
     })();
   </script>
+  </main>
 </body>
 </html>
